# Hauptbuch

./: .gitignore  Cargo.toml  Dockerfile  Makefile  QUICK_START_GUIDE.md  README.md  config.toml  docker-compose.yml  env.example
.cursor/plans/: blockchain-codebase-audit-cb017dcc.plan.md
.github/workflows/: ci.yml
benches/: pos_benchmarks.rs  run_benchmarks.rs
contracts/: GovernanceToken.sol  GovernanceTokenTest.sol  README.md  README_GOVERNANCE.md  Voting.sol  VotingTest.sol  compile.js  verify_governance.js
docker/: Dockerfile.rocksdb  README.md
docs/api/: API-REFERENCE.md  RPC-INTERFACE.md
docs/architecture/: CONSENSUS.md  CRYPTOGRAPHY.md  OVERVIEW.md  SCALABILITY.md
docs/contracts/: GOVERNANCE-TOKEN.md  VOTING-CONTRACT.md
docs/examples/: ADVANCED-EXAMPLES.md  BASIC-USAGE.md  CROSS-CHAIN-EXAMPLES.md  GOVERNANCE-EXAMPLES.md  SMART-ACCOUNT-EXAMPLES.md
docs/guides/: BENCHMARKING.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING-STARTED.md  INSTALLATION.md  TESTING.md
monitoring/: prometheus.yml
proptest-regressions/security/: formal_verification.txt
scripts/: AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  backup.sh  benchmark.sh  clean.sh  deploy.sh  dev.sh  health-check.sh  install-deps.sh  install.sh  logs.sh  monitor.sh  network.sh  performance.sh  quick-start.sh  restore.sh  rollback.sh  security.sh  setup.sh  status.sh  test.sh  uninstall.sh  update.sh  upgrade.sh  validate.sh
src/: lib.rs  main.rs
src/account_abstraction/: erc4337.rs  erc6900.rs  erc7579.rs  erc7702.rs  mod.rs
src/ai_agents/: mod.rs
src/analytics/: governance.rs  governance_test.rs  mod.rs
src/anomaly/: anomaly_test.rs  detector.rs  mod.rs
src/audit_trail/: audit.rs  audit_test.rs  mod.rs
src/based_rollup/: espresso_sequencer.rs  hotstuff_bft.rs  mod.rs  preconfirmations.rs  sequencer_network.rs
src/benchmarks/: cross_chain.rs  cross_chain_test.rs  mod.rs  performance.rs  performance_test.rs
src/compliance/: mod.rs  regulatory.rs  regulatory_test.rs
src/consensus/: abstraction.rs  mod.rs  pos.rs  pos_test.rs
src/cross_chain/: bridge.rs  bridge_test.rs  ccip.rs  ibc.rs  mod.rs
src/crypto/: binius.rs  engine.rs  mod.rs  nist_pqc.rs  plonky3.rs  python_bindings.rs  quantum_resistant.rs  quantum_resistant_test.rs
src/da_layer/: abstraction.rs  avail.rs  celestia.rs  celestia_test.rs  dynamic_selection.rs  eigenda.rs  mod.rs
src/demo/: demo.rs  demo_script.rs  demo_test.rs  mod.rs
src/deployment/: deploy.rs  deploy_test.rs  mod.rs
src/execution/: mod.rs
src/federation/: federation.rs  federation_test.rs  mod.rs
src/game_theory/: analyzer.rs  analyzer_test.rs  mod.rs
src/governance/: mod.rs  proposal.rs  proposal_test.rs
src/identity/: did.rs  did_test.rs  mod.rs  verifiable_credentials.rs
src/intent/: ai_enhanced_engine.rs  intent_engine.rs  mod.rs
src/l2/: eip4844.rs  jolt_zkvm.rs  kzg_ceremony.rs  mod.rs  rollup.rs  rollup_test.rs  sp1_zkvm.rs  zkevm.rs
src/mev_protection/: mev_engine.rs  mod.rs
src/monitoring/: mod.rs  monitor.rs  monitor_test.rs
src/network/: mod.rs  p2p.rs  p2p_test.rs  rpc_server.rs
src/oracle/: mod.rs  predictive.rs  predictive_test.rs
src/performance/: block_stm.rs  mod.rs  optimistic_validation.rs  quic_networking.rs  sealevel_parallel.rs  state_cache.rs
src/portal/: mod.rs  portal_test.rs  server.rs
src/restaking/: eigen.rs  eigen_test.rs  mod.rs
tests/: README.md  advanced_wallet_test.py  comprehensive_blockchain_test.py  install_dependencies.sh  run_all_tests.sh
(+142 files in other folders)
