[package]
name = "hauptbuch"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NIST PQC Standards (FIPS 203/204) - Production libraries
pqc_kyber = "0.7.1"         # ML-KEM (FIPS 203)
pqc_dilithium = "0.2.0"     # ML-DSA (FIPS 204)
pqcrypto-sphincsplus = "0.7.2"   # SLH-DSA (FIPS 205)

# Classical cryptography for hybrid modes
p256 = "0.13"               # ECDSA P-256
x25519-dalek = "2.0"        # X25519 key exchange
aes-gcm = "0.10"            # AES-256-GCM encryption

# Zero-Knowledge Proof Systems - Production libraries
halo2_proofs = "0.3"   # Halo2 implementation
# plonky2 = "0.1" # Plonky2 recursive proofs
# arkworks-ec = "0.4" # Arkworks elliptic curves - temporarily disabled
# arkworks-ff = "0.4" # Arkworks finite fields - temporarily disabled

# KZG Polynomial Commitments - Production libraries
kzg = "0.6.0"                    # KZG polynomial commitment scheme
rust-kzg-bn254 = "0.2.1"        # BN254 KZG for EIP-4844
rust-kzg-bn254-primitives = "0.1.2"  # BN254 primitives
rust-kzg-bn254-prover = "0.1.1"  # BN254 prover
rust-kzg-bn254-verifier = "0.1.2" # BN254 verifier

# BLS12-381 for KZG ceremony operations
blst = "0.3"                     # BLS12-381 implementation

# Note: Binius libraries are not available as Rust crates yet
# This is a placeholder for future Binius integration
# binius = "0.1.1"                 # Binius proof system
# binius-core = "0.1.0"            # Binius core functionality
# binius-field = "0.1.0"           # Binius field operations
# binius-hash = "0.1.0"            # Binius hash functions

# zkVM implementations - Production ready
sp1-lib = "5.2.2"        # SP1 zkVM (replaces Jolt)
sp1-core-executor = "5.2.2"  # SP1 core executor
sp1-derive = "5.2.2"     # SP1 derive macros
risc0-zkvm = "0.21"      # RISC Zero zkVM (fallback)

# zkML libraries - Production ready (temporarily disabled until EZKL is available)
# ezkl = "0.1"  # EZKL for zkML - temporarily disabled
# giza-sdk = "0.1"  # Giza SDK for zkML - temporarily disabled

# Performance and Infrastructure
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
dashmap = "5.5"
num_cpus = "1.0"
quinn = "0.10"  # QUIC networking
tonic = "0.10"  # gRPC
prost = "0.12"  # Protocol buffers
rocksdb = "0.21" # Database - Production ready
redis = "0.24"  # Cache - Production ready

# HTTP clients for DA layer APIs and Espresso Sequencer
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
base64 = "0.21"

# Testing and Fuzzing
proptest = "1.4"

# Note: Kani and Prusti are not available as Rust crates
# Formal verification is implemented using mathematical proofs
# and property-based testing instead of external dependencies

# Big integer arithmetic for VDF
num-bigint = "0.4"
num-traits = "0.2"

# Python FFI bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# JSON-RPC server
jsonrpc-core = "18.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
futures = "0.3"

# Additional crypto dependencies
ed25519-dalek = "2.0"
secp256k1 = "0.28"

# HTTP server for RPC
hyper = "0.14"
tokio-util = "0.7"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "hauptbuch"
path = "src/main.rs"

[lib]
name = "hauptbuch_py"
crate-type = ["cdylib"]

[[bench]]
name = "pos_benchmarks"
harness = false
